--- a/p2-website-javascript/index.html
+++ b/p2-website-javascript/index.html
@@ -54,7 +54,7 @@
         </thead>
         <tbody>
           <tr>
-            <td class="dave"><h2>23/10/2023</h2></td>
+            <td class="dave"></td>
           </tr>
         </tbody>
   </table>
