--- a/p2-website-javascript/index.html
+++ b/p2-website-javascript/index.html
@@ -3,66 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Homepagina</title>
- <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <title>Homepagina</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-        <img src="Afbeelding/college.jpg" class="logo">    
-    <h1>Homepagina ouderavond</h1>
+    <nav>
+        <div class="topnav">
+          <li><a href="index.html">Home</a></li>
+            <ul>
+                <li class="dropdown">
+                    <a href="#">Favoriete goede-doel</a>
+                    <div class="dropdown-content">  
+                        <a href="favorietegd-Robin.html">Favoriete goede-doel Robin</a>
+                        <a href="favorietegd-Ishika.html">Favoriete goede-doel Ishika</a>
+                        <a href="favorietegd-Azra.html">Favoriete goede-doel Azra</a>
+                    </div>
+                </li>
+                <div class="topnav">
+                  <ul>
+                      <li class="dropdown">
+                          <a href="#">Motivatie</a>
+                          <div class="dropdown-content">  
+                              <a href="Motivatie-Robin.html">Motivatie Robin</a>
+                              <a href="Motivatie iskika.html">Motivatie Ishika</a>
+                              <a href="Motivatie-Azra.html">Motivatie Azra</a>
+                          </div>
+                          <div class="topnav">
+                            <ul>
+                                <li class="dropdown">
+                                    <a href="#">portfolio</a>
+                                    <div class="dropdown-content">  
+                                        <a href="portfolio-Robin.html">Portfolio Robin</a>
+                                        <a href="portfolio-iskika.html">Portfolio Ishika</a>
+                                        <a href="portfolio-azra.html">Portfolio Azra</a>
+                                    </div>
+                <li><a href="#">welkom bij TCR</a></li>
+                <li class="dropdown">
+                    <a href="#">Speel de game's</a>
+                    <div class="dropdown-content">  
+                        <a href="speeldegame-robin.html">Speel de game Robin</a>
+                        <a href="speeldegame-ishika.html">Speel de game Ishika</a>
+                        <a href="speeldegame-azra.html">Speel de game Azra</a>
+                    </div>
+                </li>
+                <li class="dropdown">
+                  <a href="#">Bescrijvingen </a>
+                  <div class="dropdown-content">  
+                      <a href="speeldegame-robin.html">Speel de game Robin</a>
+                      <a href="speeldegame-ishika.html">Speel de game Ishika</a>
+                      <a href="speeldegame-azra.html">Speel de game Azra</a>
+                  </div>
+              </li>
+            </ul>
+        </div>
+    </nav>
     <header>
-      <!-- Voeg hier de inhoud van je header toe -->
-    <nav> <div class="topnav"> 
-        <a class="active" href="index.html">Home</a>
-   <li><a href="canvas.html">Canvas</a></li>
-   <li><a href="over.ons.html"> Over ons</a></li>
-   <li> <a href="eduarte.html"> eduarte</a></li>
-   <li> <a href="locatiegids.html"> Locatiegids</a></li>
-  <li><a href="BSA.html">BSA</a></li>
-  <li> <a href="opleidingswijzer.html">opleidingswijzer</a></li>
-  <li><a href="examenplan.html">examenplan</a></li>
-   <li><a href="Aanmelden.html">Aanmelden</a></li>
-   <ul>
-
-    <li class="dropdown">
-
-      <button class="dropbtn">link</button>
-
-          <div class="dropdown-content">  
-
-            <a href="https://flexedu.instructure.com/">Canvas website</a>
-
-              <a href="https://www.eduarte.nl/"target="_blank">Eduarte homepagina website</a>
-
-              <a href="https://www.techniekcollegerotterdam.nl/locaties/jan-ligthartstraat"target="_blank">Locatiegids</a>
-
-          </div>
-
-  </li>
-
- 
-
-  </ul></nav>
-    </div>
-  </header>
-    <br>
+        <!-- Content for the header goes here -->
+    </header>
     <main>
-      <table>
-        <thead>
-          <tr>
-            <th class="dave"><h2>ouderavond</h2></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="dave"></td>
-          </tr>
-        </tbody>
-  </table>
-  <img id="software" src="Afbeelding/software.jpg" alt="software">    
-</main>
-<footer>
-  <p>JAN LIGTHARTSTRAAT 250
-    3083 AM ROTTERDAM</p>
-</footer>  
-    </body>
-    </html>
+        <!-- Content for the main section goes here -->
+    </main>
+    <footer>
+        <p>footer</p>
+    </footer>
+</body>
+</html>
