--- a/p2-website-javascript/index.html
+++ b/p2-website-javascript/index.html
@@ -8,54 +8,50 @@
 </head>
 <body>
     <nav>
-        <div class="topnav">
-          <li><a href="index.html">Home</a></li>
-            <ul>
-                <li class="dropdown">
-                    <a href="#">Favoriete goede-doel</a>
-                    <div class="dropdown-content">  
-                        <a href="favorietegd-Robin.html">Favoriete goede-doel Robin</a>
-                        <a href="favorietegd-Ishika.html">Favoriete goede-doel Ishika</a>
-                        <a href="favorietegd-Azra.html">Favoriete goede-doel Azra</a>
-                    </div>
-                </li>
-                <div class="topnav">
-                  <ul>
-                      <li class="dropdown">
-                          <a href="#">Motivatie</a>
-                          <div class="dropdown-content">  
-                              <a href="Motivatie-Robin.html">Motivatie Robin</a>
-                              <a href="Motivatie iskika.html">Motivatie Ishika</a>
-                              <a href="Motivatie-Azra.html">Motivatie Azra</a>
-                          </div>
-                          <div class="topnav">
-                            <ul>
-                                <li class="dropdown">
-                                    <a href="#">portfolio</a>
-                                    <div class="dropdown-content">  
-                                        <a href="portfolio-Robin.html">Portfolio Robin</a>
-                                        <a href="portfolio-iskika.html">Portfolio Ishika</a>
-                                        <a href="portfolio-azra.html">Portfolio Azra</a>
-                                    </div>
-                <li><a href="#">welkom bij TCR</a></li>
-                <li class="dropdown">
-                    <a href="#">Speel de game's</a>
-                    <div class="dropdown-content">  
-                        <a href="speeldegame-robin.html">Speel de game Robin</a>
-                        <a href="speeldegame-ishika.html">Speel de game Ishika</a>
-                        <a href="speeldegame-azra.html">Speel de game Azra</a>
-                    </div>
-                </li>
-                <li class="dropdown">
-                  <a href="#">Bescrijvingen </a>
-                  <div class="dropdown-content">  
-                      <a href="speeldegame-robin.html">Speel de game Robin</a>
-                      <a href="speeldegame-ishika.html">Speel de game Ishika</a>
-                      <a href="speeldegame-azra.html">Speel de game Azra</a>
-                  </div>
-              </li>
-            </ul>
-        </div>
+        <ul class="topnav">
+            <li><a href="index.html">Home</a></li>
+            <li class="dropdown">
+                <a href="#" class="mijn-klasse">Favoriete goede-doel</a>
+                <div class="dropdown-content">  
+                    <a href="favorietegd-Robin.html">Favoriete goede-doel Robin</a>
+                    <a href="favorietegd-Ishika.html">Favoriete goede-doel Ishika</a>
+                    <a href="favorietegd-Azra.html">Favoriete goede-doel Azra</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="mijn-klasse">Motivatie</a>
+                <div class="dropdown-content">  
+                    <a href="Motivatie-Robin.html">Motivatie Robin</a>
+                    <a href="Motivatie iskika.html">Motivatie Ishika</a>
+                    <a href="Motivatie-Azra.html">Motivatie Azra</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="mijn-klasse">portfolio</a>
+                <div class="dropdown-content">  
+                    <a href="portfolio-Robin.html">Portfolio Robin</a>
+                    <a href="portfolio-iskika.html">Portfolio Ishika</a>
+                    <a href="portfolio-azra.html">Portfolio Azra</a>
+                </div>
+            </li>
+            <li><a href="#"  class="mijn-klasse">welkom bij TCR</a></li>
+            <li class="dropdown">
+                <a href="#" class="mijn-klasse">Speel de game's</a>
+                <div class="dropdown-content">  
+                    <a href="speeldegame-robin.html">Speel de game Robin</a>
+                    <a href="speeldegame-ishika.html">Speel de game Ishika</a>
+                    <a href="speeldegame-azra.html">Speel de game Azra</a>
+                </div>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="mijn-klasse">Beschrijvingen </a>
+                <div class="dropdown-content">  
+                    <a href="speeldegame-robin.html">Speel de game Robin</a>
+                    <a href="speeldegame-ishika.html">Speel de game Ishika</a>
+                    <a href="speeldegame-azra.html">Speel de game Azra</a>
+                </div>
+            </li>
+        </ul>
     </nav>
     <header>
         <!-- Content for the header goes here -->
