--- a/p2-website-javascript/Motivatie-Robin.html
+++ b/p2-website-javascript/Motivatie-Robin.html
@@ -4,37 +4,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Goede doel RObin</title>
+ <title>Goede doel Robin</title>
  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
    
    
    
-    <nav> <div class="topnav">
+  <nav>
+    <ul class="topnav">
         <li><a href="index.html">Home</a></li>
-       <li><a href="favorietegd-Robin.html">Favoriete goede-doel Robin</a></li>
-       <li><a href="favorietegd-Ishika.html">Favoriete goede-doel Ishika</a></li>
-       <li><a href="favorietegd-Azra.html">Favoriete goede-doel Azra</a></li>
-       <a>portfolio</a>
-       <a>favo game</a>
-       <a>uitleg game</a>
-       <a>speel de game</a>
-       <a>welkom bij TCR</a>
- 
-        <ul>
-            <li class="dropdown">
-              <a>Item</a>
-     
-                <div class="dropdown-content">  
-                  <a>1</a>
-                    <a>2</a>
-                    <a >3</a>
-                </div>
-            </li>
- 
-        </ul>
-  </nav>
+        <li class="dropdown">
+            <a href="#" class="mijn-klasse">Favoriete goede-doel</a>
+            <div class="dropdown-content">  
+                <a href="favorietegd-Robin.html">Favoriete goede-doel Robin</a>
+                <a href="favorietegd-Ishika.html">Favoriete goede-doel Ishika</a>
+                <a href="favorietegd-Azra.html">Favoriete goede-doel Azra</a>
+            </div>
+        </li>
+        <li class="dropdown">
+            <a href="#" class="mijn-klasse">Motivatie</a>
+            <div class="dropdown-content">  
+                <a href="Motivatie-Robin.html">Motivatie Robin</a>
+                <a href="Motivatie iskika.html">Motivatie Ishika</a>
+                <a href="Motivatie-Azra.html">Motivatie Azra</a>
+            </div>
+        </li>
+        <li class="dropdown">
+            <a href="#" class="mijn-klasse">portfolio</a>
+            <div class="dropdown-content">  
+                <a href="portfolio-Robin.html">Portfolio Robin</a>
+                <a href="portfolio-iskika.html">Portfolio Ishika</a>
+                <a href="portfolio-azra.html">Portfolio Azra</a>
+            </div>
+        </li>
+        <li><a href="#"  class="mijn-klasse">welkom bij TCR</a></li>
+        <li class="dropdown">
+            <a href="#" class="mijn-klasse">Speel de game's</a>
+            <div class="dropdown-content">  
+                <a href="speeldegame-robin.html">Speel de game Robin</a>
+                <a href="speeldegame-ishika.html">Speel de game Ishika</a>
+                <a href="speeldegame-azra.html">Speel de game Azra</a>
+            </div>
+        </li>
+        <li class="dropdown">
+            <a href="#" class="mijn-klasse">Beschrijvingen </a>
+            <div class="dropdown-content">  
+                <a href="beschrijving-robin.html">Beschrijving Robin</a>
+                <a href="beschrijving-ishika.html">Beschrijving Ishika</a>
+                <a href="beschrijving-azra.html">Beschrijving Azra</a>
+            </div>
+        </li>
+    </ul>
+</nav>
 </div>
     <br>
   </header>
