--- a/p2-website-javascript/index.html
+++ b/p2-website-javascript/index.html
@@ -46,9 +46,9 @@
             <li class="dropdown">
                 <a href="#" class="mijn-klasse">Beschrijvingen </a>
                 <div class="dropdown-content">  
-                    <a href="speeldegame-robin.html">Speel de game Robin</a>
-                    <a href="speeldegame-ishika.html">Speel de game Ishika</a>
-                    <a href="speeldegame-azra.html">Speel de game Azra</a>
+                    <a href="beschrijving-robin.html">Beschrijving Robin</a>
+                    <a href="beschrijving-ishika.html">Beschrijving Ishika</a>
+                    <a href="beschrijving-azra.html">Beschrijving Azra</a>
                 </div>
             </li>
         </ul>
