--- a/p2-website-javascript/speeldegame-ishika.html
+++ b/p2-website-javascript/speeldegame-ishika.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Speel de game Azra</title>
+ <title>Speel de game Ishika</title>
  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -40,7 +40,7 @@
         </li>
         <li><a href="#"  class="mijn-klasse">welkom bij TCR</a></li>
         <li class="dropdown">
-            <a href="#" class="mijn-klasse">Speel de game's</a>
+            <a href="welkombijtcr.html" class="mijn-klasse">Speel de game's</a>
             <div class="dropdown-content">  
                 <a href="speeldegame-robin.html">Speel de game Robin</a>
                 <a href="speeldegame-ishika.html">Speel de game Ishika</a>
@@ -57,7 +57,6 @@
         </li>
     </ul>
 </nav>
-</div>
     <br>
   </header>
   <br>
