--- a/p2-website-javascript/portfolio-iskika.html
+++ b/p2-website-javascript/portfolio-iskika.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Goede doel Ishika</title>
+ <title>Goede doel RObin</title>
  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -38,7 +38,7 @@
                 <a href="portfolio-azra.html">Portfolio Azra</a>
             </div>
         </li>
-        <li><a href="#"  class="mijn-klasse">welkom bij TCR</a></li>
+        <li><a href="welkombijtcr.html"  class="mijn-klasse">welkom bij TCR</a></li>
         <li class="dropdown">
             <a href="#" class="mijn-klasse">Speel de game's</a>
             <div class="dropdown-content">  
