--- a/p2-website-javascript/index.html
+++ b/p2-website-javascript/index.html
@@ -21,6 +21,7 @@
             <li class="dropdown">
                 <a href="#" class="mijn-klasse">Motivatie</a>
                 <div class="dropdown-content">  
+                    <br><br>
                     <a href="Motivatie-Robin.html">Motivatie Robin</a>
                     <a href="Motivatie iskika.html">Motivatie Ishika</a>
                     <a href="Motivatie-Azra.html">Motivatie Azra</a>
@@ -28,16 +29,18 @@
             </li>
             <li class="dropdown">
                 <a href="#" class="mijn-klasse">portfolio</a>
-                <div class="dropdown-content">  
+                <div class="dropdown-content"> 
+                    <br><br> 
                     <a href="portfolio-Robin.html">Portfolio Robin</a>
                     <a href="portfolio-iskika.html">Portfolio Ishika</a>
                     <a href="portfolio-azra.html">Portfolio Azra</a>
                 </div>
             </li>
-            <li><a href="#"  class="mijn-klasse">welkom bij TCR</a></li>
-            <li class="dropdown">
+            <li><a href="welkombijtcr.html"  class="mijn-klasse">welkom bij TCR</a></li>
+            
                 <a href="#" class="mijn-klasse">Speel de game's</a>
                 <div class="dropdown-content">  
+                    <br><br>
                     <a href="speeldegame-robin.html">Speel de game Robin</a>
                     <a href="speeldegame-ishika.html">Speel de game Ishika</a>
                     <a href="speeldegame-azra.html">Speel de game Azra</a>
@@ -46,6 +49,7 @@
             <li class="dropdown">
                 <a href="#" class="mijn-klasse">Beschrijvingen </a>
                 <div class="dropdown-content">  
+                    <br><br>
                     <a href="beschrijving-robin.html">Beschrijving Robin</a>
                     <a href="beschrijving-ishika.html">Beschrijving Ishika</a>
                     <a href="beschrijving-azra.html">Beschrijving Azra</a>
@@ -57,7 +61,7 @@
         <!-- Content for the header goes here -->
     </header>
     <main>
-        <!-- Content for the main section goes here -->
+        <div class="tenor-gif-embed" data-postid="25340727" data-share-method="host" data-aspect-ratio="1.77778" data-width="100%"><a href="https://tenor.com/view/simpson-gif-25340727">Simpson GIF</a>from <a href="https://tenor.com/search/simpson-gifs">Simpson GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
     </main>
     <footer>
         <p>footer</p>
