--- a/p2-website-javascript/Motivatie-Azra.html
+++ b/p2-website-javascript/Motivatie-Azra.html
@@ -38,7 +38,7 @@
                 <a href="portfolio-azra.html">Portfolio Azra</a>
             </div>
         </li>
-        <li><a href="#"  class="mijn-klasse">welkom bij TCR</a></li>
+        <li><a href="welkombijtcr.html"  class="mijn-klasse">welkom bij TCR</a></li>
         <li class="dropdown">
             <a href="#" class="mijn-klasse">Speel de game's</a>
             <div class="dropdown-content">  
