--- a/p2-website-javascript/favorietegd-Robin.html
+++ b/p2-website-javascript/favorietegd-Robin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Goede doel RObin</title>
+ <title>Goede doel Robin</title>
  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
