--- a/p2-website-javascript/Beschrijving-robin.html
+++ b/p2-website-javascript/Beschrijving-robin.html
@@ -62,19 +62,17 @@
   </header>
   <br>
   <main>
-   <!----- <table>
-      <thead>
-        <tr>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td ></td>
-        </tr>
-      </tbody>
-</table>--->
- 
+   
+<p>Pong is een klassiek arcadespel dat in de jaren zeventig werd geboren en zijn eenvoudige, maar verslavende gameplay heeft een iconische status verworven. Stel je een speelveld voor, doordrenkt met een sfeer van paarse tinten die de basis vormen van dit tijdloze spel. <br>
+In het hart van dit palet van kleuren bevindt zich een rood omlijnd speelveld dat symbool staat voor de grenzen van competitie.
+Twee peddels, doordrenkt met een sierlijke lichtblauwe gloed, dansen op en neer langs de randen van het veld. Deze peddels, als levendige schildwachten, weerspiegelen de actie en vurige bewegingen in hun elegante kleurencombinatie van rood en lichtblauw.
+<br> Een bol van elektrisch paars, als een zwevende kosmische bal, stuitert tussen de peddels heen en weer, een onvoorspelbare reis volgend die de spelers uitdaagt.
+
+Het spel brengt een hypnotiserende cadans voort, met flitsen van rood, paars en lichtblauw die harmonieus samenkomen terwijl de spelers hun reflexen en strategieën aanscherpen.<br>
+ Het rood symboliseert vastberadenheid, de paarse tinten vertegenwoordigen mysterie en kracht, terwijl het lichtblauw rust en sereniteit brengt te midden van de snelle dynamiek van het spel.<br>
+Pong, gehuld in deze kleuren, blijft een tijdloos meesterwerk dat de essentie van competitie en eenvoud vastlegt, terwijl het spelers blijft betoveren met zijn tijdloze charme.</p>
+<br>
+<h2><b>Je moet doneren om het spel te kunnen spelen!</b></h2>
 </main>
  
   <footer>
