favorietegd-Azra.html

--- a/p2-website-javascript/favorietegd-Azra.html
+++ b/p2-website-javascript/favorietegd-Azra.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +11,7 @@
    
    
   <nav>
-    <ul class="topnav">  
+    <ul class="topnav">
         <li><a href="index.html">Home</a></li>
         <li class="dropdown">
             <a href="#" class="mijn-klasse">Favoriete goede-doel</a>
@@ -38,7 +37,7 @@
                 <a href="portfolio-azra.html">Portfolio Azra</a>
             </div>
         </li>
-        <li><a href="welkombijtcr.html"  class="mijn-klasse">welkom bij TCR</a></li>
+        <li><a href="#"  class="mijn-klasse">welkom bij TCR</a></li>
         <li class="dropdown">
             <a href="#" class="mijn-klasse">Speel de game's</a>
             <div class="dropdown-content">  
@@ -61,19 +60,29 @@
   </header>
   <br>
   <main>
-   <!----- <table>
-      <thead>
-        <tr>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td ></td>
-        </tr>
-      </tbody>
-</table>--->
- 
+  <p class="Container">
+  Jij kunt een verschil maken in het leven van Palestijnse gemeenschappen door vandaag een <br>
+  simpele, maar krachtige daad van solidariteit te verrichten: doneer aan "Plant een Olijfboom." <br>
+  <br>
+  De eeuwenoude olijfbomen van Palestina zijn niet alleen bomen; ze zijn een symbool van veerkracht, <br>
+  hoop en de wil om te gedijen te midden van uitdagingen. Deze bomen verbinden families met hun land <br>
+  en cultuur. Helaas staan ze onder constante dreiging door de Israëlische bezetting en kolonisatie. <br>
+ <br>
+  Jouw bijdrage gaat verder dan het planten van een boom. Het herstellen van Palestijnse olijfbomen is een <br>
+  daad van verzet tegen vernietiging en een investering in economische stabiliteit voor duizenden families. <br>
+  Het is een kans om samen een positieve impact te creëren, om een lichtpuntje van hoop te brengen te midden <br>
+  van moeilijkheden. <br>
+  <br>
+  Plant samen met ons de zaden van verandering. Jouw donatie helpt niet alleen bij het herplanten van bomen, <br>
+  maar ook bij het behouden van de rijke geschiedenis en culturele erfenis van Palestina. Het is een kans <br>
+  om te laten zien dat solidariteit geen grenzen kent en dat we samen kunnen bouwen aan een betere toekomst. <br>
+ <br>
+  Doe mee en laat jouw steun groeien, net als de olijfbomen die symbool staan voor doorzettingsvermogen <br>
+  en verbondenheid. Plant een olijfboom vandaag en laat jouw handeling van liefde en steun weerklinken <br>
+  door de generaties heen. Doneer nu en help de Palestijnse olijfbomen gedijen. Samen kunnen we hoop <br>
+  en welvaart planten. <br>
+ </p>
+  <a class="Container" href="https://www.planteenolijfboom.nl/">Doneer hier voor Palestina</a>
 </main>
  
   <footer>
