Motivatie-Azra.html

--- a/p2-website-javascript/Motivatie-Azra.html
+++ b/p2-website-javascript/Motivatie-Azra.html
@@ -61,39 +61,33 @@
   </header>
   <br>
   <main>
-    <p class="Container">
+    <P class="Container">
       Als individu ben ik diep geraakt door de rijke geschiedenis en betekenis die de olijfboom draagt voor het Palestijnse volk. <br>
-      Met ongeveer zeven miljoen bomen die al eeuwenlang het landschap sieren, vormen deze oeroude bomen niet alleen een adembenemend symbool <br>
-      van de Palestijnse identiteit, maar ook een cruciale bron van inkomsten en welvaart voor duizenden families. <br>
-    </p>
-    <p class="Container">
+      Met ongeveer zeven miljoen bomen die al eeuwenlang het landschap sieren, vormen deze oeroude bomen niet alleen een adembenemend <br>
+      symbool van de Palestijnse identiteit, maar ook een cruciale bron van inkomsten en welvaart voor duizenden families. <br>
+    <br>
       De olijfboom, ook wel bekend als de Romeinse boom of Rumi, overstijgt zijn biologische rol als leverancier van olijven en olijfolie. <br>
       Voor de Palestijnen is het een levend symbool van verbondenheid met het land, een symbool van vrede, hoop, wijsheid en welvaart. <br>
       Sinds de Israëlische bezetting is de waarde van dit symbool alleen maar toegenomen, en het draagt de last van een geschiedenis <br>
       waarin toegang tot het land en het behoud van deze bomen constant worden bedreigd. <br>
-    </p>
-    <p class="Container">
-      "Plant een Olijfboom" is een organisatie die zich inzet voor de bescherming en herplanting van Palestijnse olijfbomen, <br>
-      en hun missie raakt me diep. Met de voortdurende obstakels waarmee Palestijnse boeren worden geconfronteerd, zoals de Israëlische muur, <br>
+       <br>
+      "Plant een Olijfboom" is een organisatie die zich inzet voor de bescherming en herplanting van Palestijnse olijfbomen, en hun <br>
+       missie raakt me diep. Met de voortdurende obstakels waarmee Palestijnse boeren worden geconfronteerd, zoals de Israëlische muur, <br>
       nederzettingen en restricties op toegang tot hun eigen land, is de inzet van deze organisatie van onschatbare waarde. <br>
-    </p>
-    <p class="Container">
+      <br>
       De vernietiging van olijfbomen door kolonisten en het Israëlische leger is een schrijnend probleem dat niet alleen economische verliezen met <br>
       zich meebrengt, maar ook de rijke culturele en historische erfenis van Palestina aantast. Jaarlijks gaan duizenden bomen verloren, wat de al <br>
       fragiele economie van de Palestijnen nog verder ondermijnt. <br>
-    </p>
-    <p class="Container">
+      <br>
       "Plant een Olijfboom" komt als een baken van hoop en solidariteit, met een directe impact op het herstel van Palestijnse gemeenschappen. <br>
       Door gesponsorde olijfbomen aan Palestijnse boeren te schenken, biedt de organisatie niet alleen een bron van inkomsten, maar ook een <br>
       kans om de symboliek en betekenis van deze bomen levend te houden. De steun van deze organisatie stelt boeren in staat om te blijven  <br>
       vasthouden aan hun erfgoed te midden van moeilijke omstandigheden. <br>
-    </p>
-    <p class="Container">
+      <br>
       Als ik nadenk over de waarde van deze organisatie, voel ik een diepe motivatie om bij te dragen aan hun missie. Het herstellen en <br>
       beschermen van Palestijnse olijfbomen gaat verder dan alleen het behoud van een boom; het is een daad van solidariteit en een <br>
       investering in de toekomst van een gemeenschap die vecht om haar erfgoed te behouden. <br>
-    </p>
-    <p class="Container">
+      <br>
       Samen met "Plant een Olijfboom" kunnen we een verschil maken, niet alleen door bomen te planten, maar ook door de hoop en veerkracht  <br>
       van het Palestijnse volk te ondersteunen. Laten we samenwerken om de symboliek van de olijfboom te behouden en de Palestijnse <br>
       gemeenschappen te helpen gedijen ondanks de vele uitdagingen waarmee ze worden geconfronteerd. <br>
