--- a/p2-website-javascript/welkombijtcr.html
+++ b/p2-website-javascript/welkombijtcr.html
@@ -64,7 +64,17 @@
   </header>
   <br>
   <main>
-   <a href=" https://www.techniekcollegerotterdam.nl/">Homepagina website Techniek College Rotterdam</a>
+  
+   <h2><b> <a href=" https://www.techniekcollegerotterdam.nl/" target="_blank">Homepagina website Techniek College Rotterdam</a></b></h2>
+   <img class="pic-cropper__target-image" id="-target-image" 
+   src="https://media.licdn.com/dms/image/C4D1BAQEoT9nJ4KGxUA/company-background_10000/0/1583227839846/techniek_college_rotterdam_cover?e=1704963600&amp;v=beta&amp;t=5dbw2mRElCVZctetyxpLfx192J8FPIJe2LhOpSuWNsU" 
+   alt="" role="none" style="width:396px;
+   height:222.75px;
+   top:-32.38125px;
+   left:0px;
+   transform:rotate(undefineddeg);
+   transform-origin:198px 99.38125px">
+
 </main>
  
   <footer>
