--- a/p2-website-javascript/speeldegame-robin.html
+++ b/p2-website-javascript/speeldegame-robin.html
@@ -74,7 +74,8 @@
         </tr>
       </tbody>
 </table>--->
- 
+     <!-- Embedded iframe for the game -->
+    <iframe class="f1" src="P2-pong/index1.html" width="100%" height="600" frameborder="0"></iframe>
 </main>
  
   <footer>
