--- a/p2-website-javascript/welkombijtcr.html
+++ b/p2-website-javascript/welkombijtcr.html
@@ -65,7 +65,7 @@
   </header>
   <br>
   <main>
-  
+   <!-- link to the tcr website-->
    <h2><b> <a href=" https://www.techniekcollegerotterdam.nl/" target="_blank">Homepagina website Techniek College Rotterdam</a></b></h2>
  <!-- Image from Techniek College Rotterdam -->
     
