Beschrijving-azra.html

--- a/p2-website-javascript/Beschrijving-azra.html
+++ b/p2-website-javascript/Beschrijving-azra.html
@@ -63,18 +63,17 @@
   </header>
   <br>
   <main>
-   <!----- <table>
-      <thead>
-        <tr>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td ></td>
-        </tr>
-      </tbody>
-</table>--->
+  <h1>Memory spel beschrijving</h1>
+  
+  <p>Dompel jezelf onder in een wereld van levendige tinten en uitdagende patronen. Dit kleurrijke geheugenspel brengt plezier, concentratie <br>
+    en visuele stimulatie samen in één opwindende ervaring.</p> <br>
+    
+    <h3>Doel van het Spel:</h3>
+    <p>Vind alle paren van identieke kleuren door ze om te draaien. Met elk correct gematcht paar verdien je punten en kom je dichter bij de overwinning</p>
+ 
+    <h3>Spelbord:</h3>
+    <p>Na het starten van het spel verschijnt het kleurrijke speelbord, gevuld met kaarten die wachten om onthuld te worden. Elke kaart verbergt een unieke kleur, 
+      en jouw taak is om de paren te ontdekken terwijl je je concentratie en geheugen test.</p>
  
 </main>
  
