portfolio-azra.html

--- a/p2-website-javascript/portfolio-azra.html
+++ b/p2-website-javascript/portfolio-azra.html
@@ -62,18 +62,25 @@
   </header>
   <br>
   <main>
-   <!----- <table>
-      <thead>
-        <tr>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td ></td>
-        </tr>
-      </tbody>
-</table>--->
+    <script src="script.js"></script>
+
+   
+  <div class="button-container">
+    <button onclick="toggleText('personal')">Persoonlijke gegevens</button>
+    <button onclick="toggleText('education')">Opleidingen</button>
+    <button onclick="toggleText('internship')">Stage</button>
+    <button onclick="toggleText('skills')">Competenties</button>
+    <button onclick="toggleText('abilities')">Vaardigheden</button>
+    <button onclick="toggleText('hobbies')">Hobby's</button>
+   </div>
+  
+  <p id="personalDisplay"></p>
+  <p id="educationDisplay"></p>
+  <p id="internshipDisplay"></p>
+  <p id="skillsDisplay"></p>
+  <p id="abilitiesDisplay"></p>
+  <p id="hobbiesDisplay"></p>
+  
  
 </main>
  
